TestSuite/errors/err0405.pas
type TClass = partial class
  constructor := exit;
  constructor := exit;
end;

begin
  
end.